Manejar indicadores de visibilidad con fallback seguro